[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-preprocessor"
version = "0.1.0"
description = "Reusable data preprocessing pipeline for ML and analytics workflows"
authors = [{ name = "Naveen", email = "naveenkumar19082004@gmail.com"}]
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "pandas>=1.3",
  "scikit-learn>=1.0",
  "numpy>=1.21"
]
