[metadata]
name = lazyprep
version = 0.1.2
author = NaveenkumarD
author_email = naveenkumar19082004@gmail.com
description = An efficient data preprocessing tool for data science
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas>=1.3
    scikit-learn>=1.0
    numpy>=1.21
    chardet>=4.0
    fitter>=1.5
    nltk>=3.6
    
[options.packages.find]
where = src